--- a/main.css
+++ b/main.css
@@ -1,18 +1,30 @@
 body {
   background-color: #232323;
-  
+  margin: 0;
+  font-family: "Montserrat", "Avenir"
 }
 
 h1 {
   text-align: center;
   color: white;
+  text-transform: uppercase;
+  background-color: steelblue;
+  margin: 0;
+  font-weight: normal;
+  padding: 20px 0;
+  line-height: 1.1;
+}
+
+h1 span {
+  font-size: 200%;
+  display: block;
 }
 
 .container {
   display: flex;
   flex-wrap: wrap;
   max-width: 600px;
-  margin: auto;
+  margin: 20px auto;
 }
 
 .square {
@@ -20,9 +32,45 @@ h1 {
   padding-bottom: 30%;
   background-color: purple;
   margin: 1.66%;
+  border-radius: 15%;
+  transition: background 0.6s;
+  -webkit-transition: background 0.6s;
+  -moz-transition: background 0.6s;
 }
 
-span {
-  color: #fff;
+#stripe {
+  text-align: center;
+  background-color: #fff;
+  height: 30px;
+}
+
+.selected {
+  color: white;
+  background-color: steelblue;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: bold;
+  font-size: inherit;
+  color: steelblue;
+  letter-spacing: 1px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  outline: none;
+}
+
+button:hover {
+  color: white;
+  background-color: steelblue;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
 }
 
